--- a/자바 2차원배열.md
+++ b/자바 2차원배열.md
@@ -78,10 +78,33 @@
 
 - 배열 응용
 
+  ```java
+  // 최대값, 최소값 찾기에서 초기값 설정??
+  int min = prime1.length;
+  int max = Integer.MAX_VALUE;
+  
+  // 초기값 이용, 순회하면서 모두 비교
+  for (int num : prime1) {
+  			min = Math.min(min, num);
+  			max = Math.max(max, num);
+      
+  // 원소들의 빈도 카운팅
+      int [] prime1 = {1,2,3,4,5,6};
+  	int [] checking = new int[prime1.length];
+  		
+  	for (int num : prime1) {
+  		checking[num-1]++; // +=1, ++[] 도 됨
+      }
+      System.out.println(Arrays.toString(checking)); // [1, 1, 1, 1, 1, 1]
   ```
-  // 최대값, 최소값 찾기
   
   
-  ```
 
-  
+
+
+
+
+- 배열 정리
+  - 같은 자료형의 데이터들의 모임
+  - 배열로 선언된 변수들은 연속된 데이터 공간에 할당됨
+  - 기본자료형, 식별자 // 참조자료형, 메모리 공간
